<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutUs.PrivacyPolicy">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">


        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/privacy_policy"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/privacy_policy_head1"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head2"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/content2"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_2"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head3"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/content3"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_3"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head4"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/content4"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_4"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head5"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head5"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/content5"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_5"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head6"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head6"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/content6"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_6"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head7"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head7"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/content7"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_7"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head8"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head8"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/content8"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/head9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_8"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/head9"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/content_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head9"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/content9"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal"
            />

    </RelativeLayout>

</ScrollView>