<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ChangePassword"
    android:background="@color/colorPrimaryLight">


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:layout_margin="10dp"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:layout_margin="10dp"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_margin="10dp"
            android:inputType="textVisiblePassword"/>

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            />

    </LinearLayout>

</RelativeLayout>