<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:menu="@menu/menu_profile_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            app:srcCompat="@mipmap/ic_launcher" />


        <RelativeLayout
            android:id="@+id/relativeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:text="@string/yash_salunke"
                android:textAlignment="textStart"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvChangeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/tvname"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:text="@string/change_name"
                android:textAlignment="textEnd" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeName"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:text="@string/yash3a_gmail_com"
                android:textAlignment="textStart"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvChangeEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/tvEmail"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:text="@string/change_eMail"
                android:textAlignment="textEnd" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeEmail"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:text="@string/_91_7057131346"
                android:textAlignment="textStart"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvChangeMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/tvMobile"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:text="@string/change_mobile"
                android:textAlignment="textEnd" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="110dp"
            android:text="@string/change_password"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:text="@string/forgot_password"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>


        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/log_out"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>