<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutUs.PrivacyPolicy">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">


        <TextView
            android:id="@+id/terms_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/terms_head1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/terms_content_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms_head"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_content1"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/terms_head2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms_content_1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_head2"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/terms_content_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms_head2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_content2"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/terms_head3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms_content_2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_head3"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/terms_content_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/terms_head3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_content3"
            android:textAlignment="center"
            android:textColor="@color/quantum_white_100"
            android:textSize="15sp"
            android:textStyle="normal" />
    </RelativeLayout>
</ScrollView>